--- a/src/layouts/BasePrintLayout.astro
+++ b/src/layouts/BasePrintLayout.astro
@@ -1,6 +1,6 @@
 ---
 // src/layouts/BasePrintLayout.astro
-import '../styles/base.css';
+import '../styles/main.css';
 import SubthemeInfo from '../components/SubthemeInfo.astro';
 
 const { info, title, layoutClass, cssUrl, niveauLabel, themeLabel } = Astro.props;
